src/objects/DRE__DTE_Plan_Rule__c.object
<CustomObject>
    <fields>
        <fullName>DRE__DRE_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRE Rule</label>
        <referenceTo>DRE__DRE_Rule__c</referenceTo>
        <relationshipLabel>DTE Test Cases</relationshipLabel>
        <relationshipName>DTE_Plan_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRE__DTE_Plan__c</fullName>
        <label>DTE Test Case</label>
        <referenceTo>DRE__DTE_Plan__c</referenceTo>
        <relationshipLabel>DRE Rules</relationshipLabel>
        <relationshipName>DTE_Plan_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DRE__Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRE__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                    <default>true</default>
                    <label>Applied</label>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DTE Test Rule Link</label>
    <nameField>
        <displayFormat>DTELINK-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Test Rule Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>